--- a/ts341_project/model_training/yolo_training/Entraînement.ipynb
+++ b/ts341_project/model_training/yolo_training/Entraînement.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e548e0ba",
    "metadata": {
     "execution": {
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    \"path\": \"drone_dataset\",\n",
+    "    \"path\": \"ts341_project/model_training/sim2real_approach/final_color_dataset\",\n",
     "    \"train\": \"train\",\n",
     "    \"val\": \"valid\",\n",
     "    \"nc\": 1,\n",
